<?xml version="1.0" encoding="utf-8"?>
<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_lar"
    tools:context=".MainActivity"
    tools:ignore="Deprecated,MissingPrefix">

    <TextView
        android:id="@+id/textView"
        android:layout_width="223dp"
        android:layout_height="75dp"
        android:layout_marginStart="67dp"
        android:layout_x="76dp"
        android:layout_y="5dp"
        android:text="@string/textview"
        tools:ignore="VisualLintOverlap"
        tools:layout_editor_absoluteX="95dp"
        tools:layout_editor_absoluteY="3dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="208dp"
        android:layout_height="237dp"
        android:layout_marginStart="90dp"
        android:layout_marginTop="92dp"
        android:layout_x="75dp"
        android:layout_y="77dp"
        android:contentDescription="@string/todo"
        tools:ignore="ContentDescription,ImageContrastCheck"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="86dp"
        tools:srcCompat="@tools:sample/avatars" />

    <Button
        android:id="@+id/predictBtn"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="159dp"
        android:layout_marginBottom="227dp"
        android:layout_x="91dp"
        android:layout_y="502dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#0097A7"
        android:fontFamily="@font/capriola"
        android:text="@string/Predict"
        android:textColor="#F6F4F4"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap"
        tools:layout_editor_absoluteX="143dp"
        tools:layout_editor_absoluteY="262dp" />

    <Button
        android:id="@+id/captureBtn"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="161dp"
        android:layout_marginTop="565dp"
        android:layout_x="65dp"
        android:layout_y="426dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#0097A7"
        android:fontFamily="@font/capriola"
        android:text="@string/Capture"
        android:textColor="#FFFEFE"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="VisualLintOverlap"
        tools:layout_editor_absoluteX="145dp" />

    <Button
        android:id="@+id/selectBtn"
        style="@android:style/Widget.DeviceDefault.Light.Button"
        android:layout_width="234dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="362dp"
        android:layout_x="70dp"
        android:layout_y="352dp"
        android:background="@drawable/button_style"
        android:backgroundTint="#0097A7"
        android:fontFamily="@font/capriola"
        android:stateListAnimator="@android:anim/accelerate_decelerate_interpolator"
        android:text="@string/Selectimage"
        android:textColor="#FFFDFD"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap"
        tools:layout_editor_absoluteX="153dp"
        tools:layout_editor_absoluteY="429dp" />

    <TextView
        android:id="@+id/result"
        android:layout_width="174dp"
        android:layout_height="69dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="644dp"
        android:layout_marginBottom="10dp"
        android:layout_x="96dp"
        android:layout_y="559dp"
        android:text="@string/result"
        android:textColor="#4FA3A5"
        tools:ignore="VisualLintBounds" />
</AbsoluteLayout>